# kubetransport

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
cmd/: main.go
internal/: common.go
internal/hostsync/: hostsync.go  hostsync_test.go
internal/k8pod/: k8pod.go
internal/k8svc/: k8svc.go
internal/pf/: pf.go
internal/state/: state.go
internal2/: forwarder.go  main.go
src/: events.rs  handler.rs  hosts.rs  main.rs
