[package]
name = "kubetransport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.80.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
futures = "0.3.26"
tracing-subscriber = "0.3.16"
anyhow = "1.0.69"
tokio-stream = { version = "0.1.12", features = ["net"] }

[features]
default = ["ws"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]
